--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,6 +1,6 @@
 .register-wrapper {
   min-height: 100vh;
-  background-color: #f8f9fa;
+  background-color: #fffef5;
   display: flex;
   justify-content: center;
   align-items: center;
